<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaCasas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="154dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/listaCasas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/contactar"
                android:inputType="text" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/buscar" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="number" />

            <EditText
                android:id="@+id/editHabitaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/habitaciones"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Switch
                android:id="@+id/switchComprar"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/comprar" />

            <Switch
                android:id="@+id/switchAlquilar"
                android:layout_width="144dp"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/alquilar" />

            <Switch
                android:id="@+id/switchairbnb"
                android:layout_width="200dp"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/airbnb" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>